--- a/cat.html
+++ b/cat.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="css/toji.css" rel="stylesheet">
+    <link href="css/toji.css" rel="stylesheet" >
   </head>
   <body>
     <div class="container">
@@ -47,26 +47,35 @@
                 </div>
             </nav>
         </div>
-        <div class="row">
-            <div id="carouselExample" class="carousel slide">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="img/image.png" height="520px">
-                  </div>
-                  <div class="carousel-item">
-                    <img id="d" src="img/carusel/fdsfsdfdsfsd.png" class="block w-100">
-                  </div>
+          <div class="row">
+              <div class="card" style="width: 18rem;">
+                <img src="img/baby3.jpeg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Злой сроджофаг</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="cat1.html" class="btn btn-primary">Go somewhere</a>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-            </div>
+              </div>
+              <div class="card" style="width: 15rem;">
+                <img src="img/dassaddasdassaddsababy1.jpeg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">ОЧЕНЬ грустный сроджофаг</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="cat2.html" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+              <div class="card" style="width: 18rem;">
+                <img src="img/dsasddsababy2.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Грязный сроджофаг моется</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="cat3.html" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>    
+          </div>
     </div>
+    
+
  
  
 
