ну короче теперь контакты есть

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                         </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="contact.html" aria-disabled="true">Контакты</a>
+                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                       </li>
                     </ul>
                     <form class="d-flex" role="search">
@@ -47,26 +47,38 @@
                 </div>
             </nav>
         </div>
-        <div class="row">
-            <div id="carouselExample" class="carousel slide">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="img/image.png" height="520px">
+        <div>
+            <p> Ну короче тут у нас вот есть фри животный которые сидят в ютубе ,не включая свой мозг. </p>
+        </div>
+        <div class ="row">
+            <form action="https://yandex.ru" method="POST">
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Ну типа вы кто такой</label>
+                    <input type="text" class="form-control" id="exampleInputEmail1" 
+                    aria-describedby="emailHelp" placeholder="Заполните это поле если чо">
+                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                   </div>
-                  <div class="carousel-item">
-                    <img id="d" src="img/carusel/fdsfsdfdsfsd.png" class="block w-100">
+                  <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Телефончик если вдруг</label>
+                    <input type="tel" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                   </div>
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label">Когда вам можно перезвонить дорогой наш покупатель</label>
+                  <input type="date" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-            </div>
+                <div class="mb-3">
+                  <label for="exampleInputPassword1" class="form-label">Email</label>
+                  <input type="email" class="form-control" id="exampleInputPassword1">
+                </div>
+                <button type="submit" class="btn btn-primary">ОТПРАВИТЬ!!!!!</button>
+              </form>
+              <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/10689/kineshma/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Кинешма</a><a href="https://yandex.ru/maps/10689/kineshma/?ll=42.178677%2C57.441724&utm_medium=mapframe&utm_source=maps&z=14.2" style="color:#eee;font-size:12px;position:absolute;top:14px;">Яндекс Карты — транспорт, навигация, поиск мест</a><iframe src="https://yandex.ru/map-widget/v1/?ll=42.178677%2C57.441724&z=14.2" width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+        </div>
     </div>
+    
+
  
  
 
